# qrb_ros_audio_service

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml
.github/: actionlint.yaml
.github/workflows/: build-check-sdk.yaml
debian/: changelog  control  copyright  qrb-audio-common-lib-dev.install  qrb-audio-common-lib.install  qrb-audio-manager-dev.install  qrb-audio-manager.install  rules
include/qrb_audio_common_lib/: audio_common_wrapper.hpp
include/qrb_audio_manager/: am_log.hpp  audio_manager.hpp  message_queue.hpp
include/qrb_ros_audio_service/: audio_common_client.hpp
launch/: audio_service.launch.py  component.launch.py
qrb_audio_common_lib/: CMakeLists.txt  package.xml
qrb_audio_common_lib/include/qrb_audio_common_lib/: audio_common.hpp
qrb_audio_common_lib/src/: audio_common.cpp  audio_common_wrapper.cpp  capture_stream.cpp  playback_stream.cpp
qrb_audio_manager/: CMakeLists.txt  package.xml
qrb_audio_manager/include/qrb_audio_manager/: audio_manager.hpp  stream.hpp
qrb_audio_manager/src/: audio_manager.cpp  playback_stream.cpp  record_stream.cpp  stream.cpp
qrb_ros_audio_common/: package.xml
qrb_ros_audio_common/include/qrb_ros_audio_common/: audio_common.hpp
qrb_ros_audio_common/src/: audio_common.cpp
qrb_ros_audio_service/: CMakeLists.txt  package.xml
qrb_ros_audio_service/include/qrb_ros_audio_service/: audio_common_client.hpp  audio_service.hpp
qrb_ros_audio_service/src/: audio_common_client.cpp  audio_service.cpp
src/: audio_common.cpp  audio_common_wrapper.cpp  audio_manager.cpp  audio_service.cpp  capture_stream.cpp  message_queue.cpp  playback_stream.cpp  record_stream.cpp  stream.cpp
tests/: audio_service_test.py
