<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_audio_service</name>
  <version>1.0.0</version>
  <description>QRB ROS Audio Service</description>
  <maintainer email="quic_yuchpan@quicinc.com">yuchpan</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>qrb_ros_audio_service_msgs</depend>
  <depend>qrb_ros_audio_common_msgs</depend>
  <depend>qrb_audio_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
